updated css to fix hamburger menu alignment, should check logout button alignment

--- a/frontend/src/style/header.css
+++ b/frontend/src/style/header.css
@@ -3,7 +3,6 @@
 .App__title {
     font-size: 32px;
     color: #ffffff;
-    float: left;
     margin-top: 15px;
     text-transform: uppercase;
     font-family: 'Ruda', sans-serif;
